[package]
name = "Rust-Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }